# usermon

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac.in  usermon.spec.in
icons/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  usermon-dialogs.c  usermon-dialogs.h  usermon.c  usermon.desktop.in  usermon.h
po/: Makevars  POTFILES.in  fr.po
